--- a/base_name_search_improved/views/ir_model_views.xml
+++ b/base_name_search_improved/views/ir_model_views.xml
@@ -65,13 +65,13 @@
                             <!-- TODO use new odoo domain widget -->
                             <field
                                 name="name_search_domain"
-                                attrs="{'invisible': [('use_smart_name_search', '=', False), ('add_smart_search', '=', False)]}"
+                                invisible="not use_smart_name_search and not add_smart_search"
                             />
                         </group>
                     </group>
                     <notebook
                         colspan="4"
-                        attrs="{'invisible': [('use_smart_name_search', '=', False), ('add_smart_search', '=', False)]}"
+                        invisible="not use_smart_name_search and not add_smart_search"
                     >
                         <page string="Smart Search Fields">
                             <!-- we use default m2m widget and not tags widget so that is clearer the technical name of the field added -->
