--- a/base_changeset/static/src/components/changeset_popover.scss
+++ b/base_changeset/static/src/components/changeset_popover.scss
@@ -1,6 +1,6 @@
 .o_changeset_popover {
     background-color: $o-view-background-color;
 }
-span.o_changeset_popover_wrapper > div {
-    display: inline;
+.o_wrap_input {
+    display: flex;
 }
