[IMP] database_cleanup: set appropriate labels in each purge view
instead of 'Purge this model' everywhere.

--- a/database_cleanup/views/purge_columns.xml
+++ b/database_cleanup/views/purge_columns.xml
@@ -32,6 +32,9 @@
             <field name="name" position="after">
                 <field name="model_id" />
             </field>
+            <button name="purge" position="attributes">
+                <attribute name="string">Purge this column</attribute>
+            </button>
         </field>
     </record>
 
