--- a/database_cleanup/views/purge_menus.xml
+++ b/database_cleanup/views/purge_menus.xml
@@ -24,7 +24,9 @@
         <field name="inherit_id" ref="tree_purge_line" />
         <field name="mode">primary</field>
         <field name="arch" type="xml">
-            <data />
+            <button name="purge" position="attributes">
+                <attribute name="string">Purge this menu</attribute>
+            </button>
         </field>
     </record>
 
