--- a/database_cleanup/views/purge_wizard.xml
+++ b/database_cleanup/views/purge_wizard.xml
@@ -49,7 +49,7 @@
                     type="object"
                     name="purge"
                     icon="fa-times-circle text-danger"
-                    string="Purge this model"
+                    string="Purge this record"
                     attrs="{'invisible': [('purged', '=', True)]}"
                 />
             </tree>
