[12.0][MIG] save_translation_file

--- a/save_translation_file/views/ir_module_module_view.xml
+++ b/save_translation_file/views/ir_module_module_view.xml
@@ -12,7 +12,7 @@
                         confirm="Overwrite all i18n files for this module ?"
                         type="object"
                         states="installed"
-                        icon="terp-translate"
+                        icon="fa-language"
                     />
                 </button>
             </field>
@@ -28,7 +28,7 @@
                         confirm="Overwrite all i18n files for this module ?"
                         type="object"
                         states="installed"
-                        icon="terp-translate"
+                        icon="fa-language"
                     />
                 </field>
             </field>
